# Pulse-TeX

./: .gitignore  AGENTS.md  DEV.md  README.md  pyproject.toml
design-system/: MASTER.md
design-system/pulse-tex/: MASTER.md
pulse_tex/: __init__.py
pulse_tex/cli/: __init__.py  wizard.py
pulse_tex/core/: __init__.py  config.py  database.py
pulse_tex/models/: __init__.py  base.py
pulse_tex/services/: ai_assistant.py  arxiv_client.py  diagram_service.py
pulse_tex/utils/: synctex.py
pulse_tex/web/: app.py  dependencies.py
pulse_tex/web/api/: __init__.py  ai.py  compile.py  config.py  diagram.py  files.py  literature.py  projects.py
pulse_tex/web/static/: diagram.html  editor.html  index.html  setup.html
pulse_tex/web/static/css/: diagram.css  editor.css  main.css  style.css
pulse_tex/web/static/js/: api.js  app.js  diagram.js  editor.js  i18n.js  index.js  ui.js  utils.js
pulse_tex/web/static/locales/: en.json  zh.json
tests/: Makefile  test_ai.py  test_api.py  test_diagram.py  test_editor.py  test_literature.py  test_phase5.py
